[package]
name = "dmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
nom = "7.1"
